# Parly

./: .env.example  .gitignore  Action plan.txt  Action_plan.txt  PROGRESS_LOG.md  PROJECT_IMPROVEMENTS.md  README.md  SCRAPER_STATUS.md  SETUP.md  alembic.ini  config.py  pyproject.toml  requirements.txt
.ai/: CONTEXT.md  GUIDE.md  README.md
api/: __init__.py  database.py  main.py  models.py
api/routes/: __init__.py  bills.py  members.py  votes.py
data/: all_links.txt  bill_progress_checkpoint.txt  bill_xml_checkpoint.txt  house_of_commons.db  member_ids.csv  parliament.db-journal
data/raw/bills/: all_bill_example.json  bills_recently_introduced.xml
data/raw/bills/progress/: bills_progress.json
data/raw/members/interventions/: committee_interventions.xml  hansard.xml
data/raw/members/membership/: membership.xml
data/raw/members/roles/: roles.xml
data/raw/members/sponsored_bills/: bills_sponsored.xml
data/raw/members/votes/: votes_example.xml
data/raw/petittions/: pettitions.xml
data/samples/: Parliamentarians-35-to-45th.xlsx  history_Parliaments.xlsx  sample_bill_C-214.xml
db_setup/: create_database.py  insert_roles_db.py  url_templates.py
docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_GUIDE.md
docs/analytics/: ANALYTICS_IDEAS.md  EXTERNAL_CORRELATIONS.md  FINAL_ROADMAP.md  ROADMAP.md  VIRAL_ANALYTICS_CONCEPTS.md  WILD_DISCOVERIES.md
docs/architecture/: DATABASE_SCHEMA.md  TECHNICAL_SPECIFICATION.md
docs/data/: DATA_SOURCES.md  SCRAPING_BEST_PRACTICES.md
docs/development/: AUTOMATION_WORKFLOW.md  IMPLEMENTATION_GUIDE.md
docs/historical/: historical_parlyinfo_search.md
frontend/: package-lock.json  package.json
frontend/pages/: index.js
migrations/: env.py
migrations/versions/: 20d186398248_initial_migration_capture_current_schema.py  a46528f216f8_baseline_schema_creation_for_new_.py  a907ccf90fad_add_bill_xml_fields.py  cf0c0aac4b7e_add_senate_support.py  d7ac3602a5e8_complete_schema_migration_with_all_.py
scripts/: check_db.py  db_check.py  inspect_database.py  validate_data_integrity.py
scripts/analysis/: classify_vote_types.py  fix_year_mapping.py
scripts/analytics/: discover_patterns.py  external_correlations.py  wild_questions.py
scripts/extraction/: fetch_votes.py  member_id_scraper.py  normalize_member_links.py  scrape_roles.py  scraper_template.py
scripts/extraction/bills/: README.md  fetch_all_bills.py  fetch_bill_progress.py  fetch_bill_xml.py  fetch_bills.py  fetch_recent_bills.py  fill_missing_bill_data.py
scripts/extraction/members/: enrich_historical_members.py  update_members_simple.py
scripts/extraction/roles/: scrape_roles.py
scripts/extraction/senators/: import_senators_from_pdf.py
scripts/extraction/votes/: fetch_votes.py  test_fetch_votes.py
tests/: __init__.py  conftest.py  test_api.py
